--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body class="p-4">
 
   <!-- Button to trigger modal -->
-  <button id="open-modal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal">
+  <button id="open-modal" type="button" class="btn btn-primary">
     Open Modal
   </button>
 
@@ -21,7 +21,7 @@
   <div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="newtonModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered"> <!-- Vertically centered -->
       <div class="modal-content">
-        
+
         <!-- Modal Header -->
         <div class="modal-header">
           <h5 class="modal-title" id="newtonModalLabel">New Modal</h5>
@@ -39,3 +39,20 @@
         </div>
 
       </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Explicit modal trigger script -->
+  <script>
+    document.getElementById("open-modal").addEventListener("click", function () {
+      const modalEl = document.getElementById("newton-modal");
+      const modal = new bootstrap.Modal(modalEl);
+      modal.show();
+    });
+  </script>
+
+</body>
+</html>
