--- a/main.html
+++ b/main.html
@@ -73,6 +73,7 @@
             Lorem ipsum dolor sit amet
           </div>
           <div class="modal-footer">
+            <!-- Only the Close button is needed for Cypress click test -->
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Save changes</button>
           </div>
