--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Assignment</title>
+  <title>Bootstrap Assignment - Cypress Ready</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -65,18 +65,21 @@
     <div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="newtonModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
+
           <div class="modal-header">
             <h5 class="modal-title" id="newtonModalLabel">New Modal</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
+
           <div class="modal-body">
             Lorem ipsum dolor sit amet
           </div>
+
           <div class="modal-footer">
-            <!-- Only the Close button is needed for Cypress click test -->
+            <!-- Only one button for Cypress click -->
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
+
         </div>
       </div>
     </div>
